segfault.
Needs fixing.  BIG bug.  if you turn "kde off" in your eesh it will fix that,
or if you want kde support only use desktop 0 for now.  'nuff said.


-------------------------------------------------------------------------------

Fri Sep 17 08:57:02 PDT 1999
(Raster)

have erealloc call efree if size == 0 & ptr != NULL

if we change desktop area size - dont reshufle sticky windows... :)

-------------------------------------------------------------------------------

Fri Sep 17 09:43:01 PDT 1999
(Raster)

handle icon property change events properly and redraw iconbox if window 
iconfied.

fixed up 2 images in brushed metal theme + add right side pager border

-------------------------------------------------------------------------------

Fri Sep 17 11:29:07 PDT 1999
(KainX)

Changes to the memory allocation stuff to make it more portable and
such.  Account for all the different ways they could be called and
do the rerouting ourselves so we don't depend on the OS.

-------------------------------------------------------------------------------

Fri Sep 17 12:45:36 PDT 1999
(Mandrake)

fixed the kde support causing segfault bug
fixed the kde event duplication bugs.
fixed "segfault everything on non-desk-0 bug"

-------------------------------------------------------------------------------

Fri Sep 17 13:04:10 PDT 1999
(Mandrake)

fixed a hard-to-find crashing bug in kde support

-------------------------------------------------------------------------------

Fri Sep 17 13:14:42 PDT 1999
(Mandrake)

titlebar updates update in the kpanel taskbar.

-------------------------------------------------------------------------------

Fri Sep 17 15:33:29 PDT 1999
(Mandrake)

when we change desktops and/or areas, unfocus the currently focused window.

-------------------------------------------------------------------------------

Fri Sep 17 15:55:05 PDT 1999
(Mandrake)

fix minor casting bug