@@ -137,15 +137,15 @@ ChangeNumberOfDesktops(int quantity)
    EWin              **lst;
 
    pnum = mode.numdesktops;
+   for (i = quantity; i < ENLIGHTENMENT_CONF_NUM_DESKTOPS; i++)
+      LowerDesktop(i);
    mode.numdesktops = quantity;
+
    if (mode.numdesktops <= 0)
-     {
-	mode.numdesktops = 1;
-     }
+      mode.numdesktops = 1;
    else if (mode.numdesktops > ENLIGHTENMENT_CONF_NUM_DESKTOPS)
-     {
-	mode.numdesktops = ENLIGHTENMENT_CONF_NUM_DESKTOPS;
-     }
+      mode.numdesktops = ENLIGHTENMENT_CONF_NUM_DESKTOPS;
+
    lst = (EWin **) ListItemType(&num, LIST_TYPE_EWIN);
    if (lst)
      {
@@ -201,8 +201,6 @@ ChangeNumberOfDesktops(int quantity)
    if (mode.kde_support)
       KDE_SetNumDesktops();
 
-   for (i = mode.numdesktops; i < ENLIGHTENMENT_CONF_NUM_DESKTOPS; i++)
-      LowerDesktop(i);
 }
 
 void
